# LogStatus

./: CMakeLists.txt  LogStatus.sln  LogStatus.vcxproj  LogStatus.vcxproj.filters  clientlist.cfg
LogStatus/: ClientCollection.cpp  ClientCollection.hpp  ClientEntry.cpp  ClientEntry.hpp  ConnectionStatus.cpp  ConnectionStatus.hpp  ErrorCollection.cpp  ErrorCollection.hpp  ErrorEntry.cpp  ErrorEntry.hpp  LogContainer.cpp  LogContainer.hpp  LogEntry.cpp  LogEntry.hpp  ServerStatus.cpp  ServerStatus.hpp  main.cpp
LogStatus.xcodeproj/: project.pbxproj
LogStatus.xcodeproj/xcshareddata/xcschemes/: LogStatus.xcscheme
